# AbyssReader

./: .gitignore  README.md  check-deps-2.txt  check-deps.txt  check-remaining.txt  electron-builder.yml  index.html  legado-vs-abyssreader.txt  modules-content.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  ui-css-files.txt  ui-vue-1.txt  ui-vue-2.txt  unread-files.txt  vite.config.mts  vite.config.ts
.github/workflows/: build.yml
resources/: entitlements.mac.plist
resources/icons/: icon.icns
scripts/: afterPack.js  copy-preload.cjs  copy-preload.js  installer.nsh  polyfill.cjs
sources/: .gitkeep  README.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: book.rs  bookshelf.rs  fetch_url.rs  mod.rs  source.rs
src-tauri/src/network/: http.rs
src-tauri/src/storage/: db.rs  mod.rs  models.rs
src/api/: tauri.ts
src/backup_20260713_095633/: book-info.ts  css.ts  index.ts  java-bridge.ts  js.ts  network.ts  toc.ts
src/backup_20260713_095828/: css.ts  index.ts  java-bridge.ts  webview.ts
src/backup_20260713_100902/: engine.ts  explore.ts  index.ts  ipc-handlers.ts
src/backup_20260713_104549/: ipc-handlers.ts  search.ts  source-helper.ts
src/backup_ui_20260713_103347/: Bookshelf.vue  Reader.vue  Search.vue  bookshelf.ts
src/components/: BookCard.vue  ChapterList.vue  SyncStatus.vue
src/engine/: book-info.ts  content.ts  explore.ts  index.ts  ruleEngine.ts  search.ts  source-helper.ts  toc.ts  toc.ts.bak3
src/main/: index.ts  (+10 more)
(+101 files in other folders)
